# esp32p4_opencv

./: CMakeLists.txt  README.md  build_opencv.sh  preprocess.h  stdint.h  toolchain-esp32.cmake
esp32p4/examples/hello_opencv/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32p4/examples/hello_opencv/main/: CMakeLists.txt  main.cpp
esp32p4/examples/hello_opencv/main/opencv/opencv2/: opencv_modules.hpp
esp32p4/lib/release_build/opencv/opencv2/: cvconfig.h
